# meshviewer

./: CMakeLists.txt  main.py  meshviewer.sh.in
plugin/: AxisGeometry.hpp  AxisLayer.hpp  AxisRenderable.cpp  AxisRenderable.hpp  CMakeLists.txt  CameraInfo.cpp  CameraInfo.hpp  IRenderable.hpp  ImageLayer.cpp  ImageLayer.hpp  ImageRenderable.cpp  ImageRenderable.hpp  LayerItem.cpp  LayerItem.hpp  MeshData.hpp  MeshLayer.cpp  MeshLayer.hpp  MeshLoader.cpp  MeshLoader.hpp  MeshPicker.cpp  MeshPicker.hpp  MeshRenderable.cpp  MeshRenderable.hpp  MotionInfo.cpp  MotionInfo.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneState.hpp  SceneView.cpp  SceneView.hpp  SphereGeometry.hpp  SphereLayer.hpp  SphereRenderable.cpp  SphereRenderable.hpp  vertex.hpp
plugin/shaders/: imageQuad.frag  imageQuad.vert  instanciedColor.vert  mesh.frag  mesh.vert  simpleColor.frag  simpleColor.vert
qml/: main.qml
